--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DroughtSDF
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Package to analyse Drought features and its changes using Copula and Entropy Theory
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Pedro Alencar
+Maintainer: Pedro Alencar <pedro.alencar@campus.tu-berlin.de>
+Description: This package uses the principle of maximum entropy (Shannon, 1948) to obtain the Most Entropic Canonical Copula (Zhang and Singh, 2019). The main aim of the package is to compare changes in drought features (bivariate) over time. However, the available functions can be implemented to other processes and variables.
+License: MIT License Copyright (c) 2021 Pedro Alencar
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.2
